# gitstats

./: .gitignore  .pre-commit-config.yaml  README.md  gitstats.py  mailmap.sh  pyproject.toml
client/: confluence.py
confluence/: __init__.py  client.py  contentBuilder.py  utilities.py
core/: __init__.py  author.py  blame.py  commit.py  diffstat.py  gitblame.py  gitforeachref.py  gitlog.py  gitls.py  gitrevlist.py  gitshortlog.py  gitstats.py  gitstatsLib.py  mailmap.py  percentageLogging.py  persistence.py  process.py  regexes.py  template.py  utilities.py
core/model/: author.py  blame.py  commit.py  diffstat.py  fileType.py  numstat.py
gitstats/: __main__.py
gitstats/clients/: confluence.py
gitstats/data/: __init__.py  authors.py  blames.py  committers.py  files.py  logs.py  numstats.py  references.py  reviewers.py  shortlog.py
gitstats/infrastructure/: __init__.py  logging.py  scope.py
gitstats/render/: cemetery.py  commits_and_impact.py  commits_on_behalf_of.py  eloc.py  files.py  others.py  references.py  render.py  reviews.py
gitstats/stats/: commits_and_impact.py  commits_on_behalf_of.py  dates.py  edited_lines_of_code.py  extensions.py  references.py  reviews.py  utils.py
plaintext/: __init__.py  contentBuilder.py  utilities.py
printer/: confluence.py  formatter.py  markdown.py  printer.py
resources/: confluence.txt  mailmap.yaml.template  plaintext.txt  regexes.yaml.template
tests/: __init__.py
tests/clients/: test_confluence.py
tests/data/: test_get_authors.py  test_get_blames.py  test_get_commits.py  test_get_committers.py  (+6 more)
(+48 files in other folders)
